improvement(responsive): fixing error not repsonsive on mobile

--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -13,6 +13,10 @@
     padding: 1.2em 4.8em;
 }
 
+.footer-nav-left {
+    display: flex;
+}
+
 .footer-item-icon .icon {
     height: 30px;
     width: 30px;
