--- a/assets/css/introduction.css
+++ b/assets/css/introduction.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 360px) {
+@media only screen and (min-width: 360px) and (max-width: 900px) {
     .introduction {
         margin: 5em 0 0 0 !important;
         grid-template-columns: 100% !important;
