--- a/assets/css/new-product.css
+++ b/assets/css/new-product.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 360px) {
+@media only screen and (min-width: 360px) and (max-width: 900px) {
     .new-product {
         flex-direction: column-reverse !important;
         margin: 2em 0 0 0 !important;
