--- a/assets/css/products.css
+++ b/assets/css/products.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 360px) {
+@media only screen and (min-width: 360px) and (max-width: 900px) {
     .products-card {
         width: 150px !important;
         height: 150px !important;
