--- a/assets/css/social.css
+++ b/assets/css/social.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 360px) {
+@media only screen and (min-width: 360px) and (max-width: 900px) {
     .social {
         margin: 1.5em 5% 0 5% !important;
     }
